--- a/sorteio-de-frases/.project
+++ b/sorteio-de-frases/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sorteioDeFrases</name>
+	<name>sorteio-de-frases</name>
 	<comment></comment>
 	<projects>
 	</projects>
